# equisolve

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-operations.txt  requirements-torch.txt  ridge-torchscript.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  docs.yml  lint.yml  tests.yml
docs/: requirements.txt
docs/src/: conf.py  index.rst
docs/src/how-to/: index.rst
docs/src/reference/: index.rst  models.rst  neural_network.rst  preprocessing.rst
docs/src/reference/selection/: feature-selection.rst  index.rst
docs/src/reference/utils/: convert.rst  index.rst  split_data.rst
examples/: README.rst  _demo_for_PR.py  composed-model.py  dataset.xyz  linear-model.py  low-rank-kernel-model.py  multi_spectra_script-thorben.ipynb  multi_spectra_script-water.pickle  multi_spectra_script.ipynb  sparse-kernel-model.py
examples/multi_spectra/: driver_test.ipynb  multi_spectra_script.ipynb  multi_spectra_script.py
latest/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: index.doctree
latest/.doctrees/examples/: index.doctree  linear-model.doctree  sg_execution_times.doctree
latest/.doctrees/how-to/: index.doctree
latest/.doctrees/reference/: index.doctree  models.doctree  neural_network.doctree  preprocessing.doctree
latest/.doctrees/reference/selection/: feature-selection.doctree  greedyselector.doctree  index.doctree  sample-selection.doctree
latest/.doctrees/reference/utils/: convert.doctree  index.doctree  metrics.doctree  split_data.doctree
latest/_downloads/9e7e034fc905620c703930a67fc9c6b5/: linear-model.ipynb
latest/_modules/: index.html
latest/_modules/equisolve/nn/: module_tensor.html
latest/_modules/equisolve/numpy/: _selection.html  feature_selection.html  sample_selection.html
latest/_modules/equisolve/utils/: convert.html  metrics.html  split_data.html
latest/_sources/examples/: index.rst.txt  linear-model.rst.txt  sg_execution_times.rst.txt
latest/_sources/reference/: index.rst.txt  preprocessing.rst.txt
latest/_sources/reference/selection/: greedyselector.rst.txt  sample-selection.rst.txt
latest/_sources/reference/utils/: index.rst.txt  metrics.rst.txt
latest/examples/: index.html  linear-model.html  sg_execution_times.html
latest/how-to/: index.html
latest/reference/: index.html  models.html  neural_network.html  preprocessing.html
latest/reference/selection/: feature-selection.html  greedyselector.html  index.html  sample-selection.html
latest/reference/utils/: convert.html  index.html  metrics.html  split_data.html
src/equisolve/: __init__.py  module.py  split_tensors.py
src/equisolve/md/: __init__.py  ipi_driver.py
src/equisolve/mlp/: __init__.py  base.py
src/equisolve/nn/: __init__.py  module_tensor.py
src/equisolve/numpy/: __init__.py  _selection.py  feature_selection.py  sample_selection.py  utils.py
src/equisolve/numpy/compose/: __init__.py  _base.py
src/equisolve/numpy/kernels/: __init__.py  _aggregate_kernel.py
src/equisolve/numpy/models/: __init__.py  generate.py  linear_model.py  ridge.py  sor_kernel_ridge.py  sparse_kernel.py  test.py  utils.py
src/equisolve/numpy/preprocessing/: __init__.py  _base.py
src/equisolve/numpy/scripts/: __init__.py  base.py  equi_kit.py  lode.py  md_calculator.py  multispectra.py
src/equisolve/numpy/transformers/: __init__.py
src/equisolve/torch/: utils.py
src/equisolve/utils/: __init__.py  convert.py  metrics.py  split_data.py
src/equisolve/vanilla/: __init__.py  utils.py
src/equisolve/vanilla/models/: __init__.py  full_kernel.py  linear.py  sparse_kernel.py
src/equisolve/vanilla/preprocessing/: __init__.py  _base.py
src/equisolve/vanilla/transformers/: __init__.py  powerspectrum.py
tests/: test_init.py
tests/equisolve_tests/: utilities.py
tests/equisolve_tests/md/: test_md.py
tests/equisolve_tests/mlp/: test_mlp.py
tests/equisolve_tests/nn/: test_module_tensor.py
tests/equisolve_tests/numpy/: feature_selection.py  sample_selection.py  test_feature_selection.py  test_sample_selection.py  test_utils.py  utilities.py  utils.py
tests/equisolve_tests/numpy/models/: linear_model.py  sor_kernel_ridge.py  test_linear_model.py
tests/equisolve_tests/numpy/preprocessing/: base.py  test_base.py
tests/equisolve_tests/utils/: convert.py  metrics.py  split_data.py  test_metrics.py  test_split_data.py
tests/numpy/compose/: test_base.py
tests/numpy/models/: test_linear_model.py
tests/utils/: test_convert.py
