[metadata]
name = equisolve
description = A package tasked with taking equistore objects and computing machine learning models using them.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
author = attr: equisolve.__authors__

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    Science
    Machine Learning

python_requires = >=3.6

project_urls =
    Source = https://github.com/lab-cosmo/equisolve
    Documentation = https://github.com/lab-cosmo/equisolve
    Issue Tracker = https://github.com/lab-cosmo/equisolve/issues

[options]
package_dir=
    =src
packages = find:
include_package_data = True

install_requires =
    equistore @ https://github.com/lab-cosmo/equistore/archive/467baf0.zip
    numpy>=1.19.0
    scipy>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
tests =
    ase
    coverage[toml]
    hypothesis
    pytest
    pytest-cov
    rascaline @ https://github.com/luthaf/rascaline/archive/master.zip
docs =
    ase
    furo
    ipykernel
    ipywidgets
    matplotlib
    nbsphinx
    nbval
    sphinx
    sphinx-gallery
    rascaline @ https://github.com/luthaf/rascaline/archive/master.zip

[bdist_wheel]
universal=1

[flake8]
max_line_length = 88
